# oak

./: Dockerfile  WORKSPACE  cloudbuild.yaml
.circleci/: config.yml
.github/: main.workflow
.github/workflows/: dockerimage.yml  reproducibility.yaml
docs/: INSTALL-OSX.md
examples/: Cargo.toml
examples/abitest/module_0/rust/: Cargo.toml
examples/abitest/module_0/rust/src/proto/: abitest.rs
examples/abitest/module_1/rust/: Cargo.toml
examples/abitest/tests/: Cargo.toml
examples/chat/common/: Cargo.toml
examples/chat/common/src/proto/: chat.rs
examples/chat/module_0/rust/: Cargo.toml
examples/chat/module_1/rust/: Cargo.toml
examples/hello_world/module/rust/: Cargo.toml
examples/hello_world/module/rust/src/: lib.rs
examples/hello_world/module/rust/src/proto/: hello_world.rs
examples/hello_world/src/proto/: hello_world_grpc.rs
examples/machine_learning/module/rust/: Cargo.toml
examples/private_set_intersection/module/rust/: Cargo.toml
examples/private_set_intersection/module/rust/src/proto/: private_set_intersection.rs
examples/running_average/module/rust/: Cargo.toml
examples/running_average/module/rust/src/proto/: running_average.rs
examples/rustfmt/module/rust/: Cargo.toml
examples/trusted_information_retrieval/module_1/rust/src/: lib.rs
oak/server/: BUILD  oak_runtime.cc  oak_runtime.h  wasm_node.cc  wasm_node.h
oak/server/asylo/: BUILD  enclave_server.cc  enclave_server.h
oak/server/asylo/test/: BUILD
oak/server/rust/oak_abi/: build.rs
oak/server/rust/oak_abi/src/: lib.rs
oak/server/rust/oak_abi/src/proto/: mod.rs  oak_api.rs
oak/server/rust/oak_loader/: Cargo.toml
oak/server/rust/oak_loader/src/: main.rs
oak/server/rust/oak_runtime/: Cargo.toml
oak/server/rust/oak_runtime/src/: config.rs  lib.rs
oak/server/rust/oak_runtime/src/metrics/: server.rs
oak/server/rust/oak_runtime/src/node/wasm/: tests.rs
oak/server/rust/oak_runtime/src/proto/: manager.rs
oak/server/rust/oak_runtime/src/runtime/: channel.rs  introspect.rs  mod.rs  proxy.rs
runner/src/: internal.rs
rust/oak/: Cargo.toml
rust/oak/src/: future.rs  lib.rs
scripts/: Cargo.toml  check_enclave_reproducibility  run_examples  run_server
sdk/rust/oak/: Cargo.toml
sdk/rust/oak/src/: lib.rs
sdk/rust/oak/src/grpc/: mod.rs  server.rs
sdk/rust/oak/src/io/: buffer.rs  decodable.rs  encodable.rs  mod.rs  receiver.rs  sender.rs
sdk/rust/oak/src/proto/: code.rs  grpc_encap.rs  policy.rs  status.rs  storage.rs  storage_channel.rs
sdk/rust/oak/src/storage/: mod.rs
sdk/rust/oak_derive/: Cargo.toml
sdk/rust/oak_derive/src/: lib.rs
sdk/rust/oak_log/: Cargo.toml
sdk/rust/oak_log/src/: lib.rs
sdk/rust/oak_tests/: Cargo.toml
sdk/rust/oak_tests/src/: lib.rs
