[workspace]

members = [
    "abitest/abitest_common",
    "abitest/module_0/rust",
    "abitest/module_1/rust",
    "abitest/tests",
    "chat/common",
    "chat/module_0/rust",
    "chat/module_1/rust",
    "hello_world/module/rust",
    "machine_learning/module/rust",
    "private_set_intersection/module/rust",
    "running_average/module/rust",
    # "rustfmt/module/rust", # Currently excluded because requires Rust nightly.
]
