[package]
name = "abitest_tests"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
abitest_0_frontend = { path = "../module_0/rust" }
abitest_1_backend = { path = "../module_1/rust" }
log = "*"
oak = { path = "../../../sdk/rust/oak" }
oak_log = { path = "../../../sdk/rust/oak_log" }
protobuf = "*"

[dev-dependencies]
assert_matches = "*"
oak_runtime = { path = "../../../oak/server/rust/oak_runtime" }
oak_tests = { path = "../../../sdk/rust/oak_tests" }
serial_test = "0.2"
serial_test_derive = "0.2"
