[package]
name = "chat_1_backend"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chat_common = { path = "../../common" }
log = "*"
oak = { path = "../../../../sdk/rust/oak" }
oak_log = { path = "../../../../sdk/rust/oak_log" }
protobuf = "*"
