[package]
name = "hello_world"
version = "0.1.0"
authors = ["Tiziano Santoro <tzn@google.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "*"
oak = { path = "../../../../sdk/rust/oak" }
oak_derive = { path = "../../../../sdk/rust/oak_derive" }
oak_log = { path = "../../../../sdk/rust/oak_log" }
protobuf = "*"

[dev-dependencies]
assert_matches = "*"
oak_abi = { path = "../../../../oak/server/rust/oak_abi" }
oak_tests = { path = "../../../../sdk/rust/oak_tests" }
serial_test = "0.2"
serial_test_derive = "0.2"

[build-dependencies]
protoc-rust-grpc = { path = "../../../../third_party/grpc-rust/protoc-rust-grpc" }
