[package]
name = "rustfmt"
version = "0.1.0"
authors = ["Tiziano Santoro <tzn@google.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "*"
oak = { path = "../../../../sdk/rust/oak" }
oak_derive = { path = "../../../../sdk/rust/oak_derive" }
oak_log = { path = "../../../../sdk/rust/oak_log" }
protobuf = "*"
rustfmt-nightly = "*"

[build-dependencies]
protoc-rust-grpc = { path = "../../../../third_party/grpc-rust/protoc-rust-grpc" }
